--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc && rollup -c && uglifyjs scripts/ScriptBoxMC.js -o scripts/ScriptBoxMC.min.js -c --source-map"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/Unknown-Creators-Team/ScriptBoxMC#readme",
   "devDependencies": {
-    "@minecraft/server": "1.17.0-beta.1.21.50-stable",
-    "@minecraft/server-ui": "1.4.0-beta.1.21.50-stable"
+    "@minecraft/server": "2.0.0-beta.1.21.70-stable",
+    "@minecraft/server-ui": "2.0.0-beta.1.21.70-stable"
   }
 }
